The (partial) return of JEI support